// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. before resolving image 1`] = `
<ProgressiveImage
  placeholder="small.jpg"
  src="origin.jpg"
>
  <Img
    image="small.jpg"
    isLoaded={false}
    placeholder="small.jpg"
    src="origin.jpg"
  >
    <div
      className="sc-bdVaJa eilCag"
      placeholder="small.jpg"
      src="origin.jpg"
    />
  </Img>
</ProgressiveImage>
`;

exports[`2. after resolving image 1`] = `
<ProgressiveImage
  placeholder="small.jpg"
  src="origin.jpg"
>
  <Img
    image="origin.jpg"
    isLoaded={true}
    placeholder="small.jpg"
    src="origin.jpg"
  >
    <div
      className="sc-bdVaJa lcptnG"
      placeholder="small.jpg"
      src="origin.jpg"
    />
  </Img>
</ProgressiveImage>
`;
